--- a/public/index.html
+++ b/public/index.html
@@ -4,17 +4,14 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="theme-color" content="#000000" />
-		<meta
-			name="description"
-			content="Web site created using create-react-app"
-		/>
+		<meta name="theme-color" content="#212529" />
+		<meta name="description" content="Prettier frontend for the miniflux feed reader" />
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-		<title>React App</title>
+		<title>Herald</title>
 	</head>
 	<body style="background-color: #212529;">
-		<noscript>You need to enable JavaScript to run this app.</noscript>
+		<noscript>You need to enable JavaScript to use Herald.</noscript>
 		<div id="root"></div>
 	</body>
 </html>
