--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="theme-color" content="#212529" />
-		<meta name="description" content="Prettier frontend for the miniflux feed reader" />
-		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<title>Herald</title>
+
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="description" content="Prettier frontend for the miniflux feed reader" />
+
+		<script type="text/javascript">window.weather = "##WEATHER##"; window.paperName = "##PAPERNAME##"</script>
 	</head>
 	<body style="background-color: #212529;">
 		<noscript>You need to enable JavaScript to use Herald.</noscript>
