--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 		<title>Herald</title>
 
 		<meta charset="utf-8" />
+		<meta name="robots" content="noindex">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="description" content="Prettier frontend for the miniflux feed reader" />
 
